# service_desk

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pyproject.toml
doc/: .$realtionship.drawio.bkp  realtionship.drawio
service_desk/: config.py
