[tool.poetry]
name = "service-desk"
version = "0.1.0"
description = ""
authors = ["adios <eremeevvv72@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.21"
fastapi = "^0.103.2"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.0.292"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"
filterwarnings = [
    "error",
    'ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10:DeprecationWarning:asyncio',
    'ignore:starlette.middleware.wsgi is deprecated and will be removed in a future release\..*:DeprecationWarning:starlette',
    "ignore:'cgi' is deprecated:DeprecationWarning",
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    "ignore:You seem to already have a custom.*:RuntimeWarning:trio",
    "ignore::trio.TrioDeprecationWarning",
    'ignore::pytest.PytestDeprecationWarning:pytest_cov',
]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
